--- a/src/lab/exp1/Manual.html
+++ b/src/lab/exp1/Manual.html
@@ -43,6 +43,18 @@
     <!--        <link href="../css/style-main.scss" rel="stylesheet"/>
     <script src="tabs.js" type="text/javascript"></script>
 <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-67558473-1', 'auto');ga('send', 'pageview');</script>	-->
+
+<style>
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+color:black;
+}
+td,th {
+  padding: 5px;
+  text-align: center;
+}
+</style>
 </head>
 
 <body class="index" id="page-top">
@@ -70,23 +82,23 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse menu-div" id="bs-example-navbar-collapse-1" style="border: 0px;">
 
-                        <!-- <ul class="nav navbar-nav navbar-right menu-ul search-ul" style="position: relative; top: -5px;">
+                         <ul class="nav navbar-nav navbar-right menu-ul search-ul" style="position: relative; top: -5px;">
 			                	<li>
 			                		<form method="get" action="../../../search-result.html">
 			                        	<input type="text" class="search-textbox" placeholder="SEARCH FOR A LAB" name="q" id="q"/>
 			                        	<input type="submit" value="" class="search-button" />
 			                        </form>
 			                	</li>
-			                </ul> -->
+			                </ul> 
 
                         <ul class="nav navbar-nav navbar-right menu-ul">
 
                             <li class="page-scroll menu-li ">
                                 <a class="menu-a" href="http://vlab.co.in/">HOME</a>
                             </li>
-                            <!--  <li class="page-scroll menu-li menu-li-active">
-			                        <a href="http://vlabs.ac.in/labs.html"  class="menu-a menu-a-active" >ALL LABS</a>
-			                    </li> -->
+                            <li class="page-scroll menu-li menu-li-active">
+			                        <a href="http://vlab.co.in">ALL LABS</a>
+			                    </li> 
                             <li class="page-scroll menu-li ">
                                 <a class="menu-a" href="http://vlab.co.in/participating-institutes">PARTNERS</a>
                             </li>
@@ -143,7 +155,23 @@
                         <h1 class="text-h1-lightblue">Bernoulli's Experiment</h1>
                         <div class="content" id="experiment-article-section-5-content">
                             <p>
-                                <img alt="" height="325" src="Observation_Table.JPG" width="550"/>
+                                 <h3>OBSERVATIONS</h3>
+                                 <h5>Constants</h5>
+                                 <ul>
+                                  <li>Measuring tank size,a m<sup>2</sup></li>
+<li>The height (h<sub>m</sub>) for which the time t<sub>1</sub> and t<sub>2</sub>are noted to collect water in the measuring tank</li>
+<li>The areas of cross swction A<sub>1</sub>,A<sub>2</sub>,etc</li>
+</ul>
+<h5>variables</h5>
+<ul>
+<li>The piezometer readings H<sub>p1</sub>,H<sub>p2</sub> etc in m of water</li>
+<li>Time t<sub>m</sub> seconds required to collect waterfor a height of h<sub>m</sub> in the measuring tank as mean value of readings t<sub>1</sub> and t<sub>2</sub>.</li>
+</ul>
+<table>
+<tbody><tr><th>S no</th><th>h(m)</th><th>t<sub>1</sub>(s)</th><th>t<sub>2</sub>(s)</th><th>Q<sub>a</sub>(m<sup>3</sup>/s)</th><th>A(m<sup>2</sup>)</th><th>V(m/s)</th><th>H<sub>e</sub>(m)</th><th>H<sub>p</sub>(m)</th><th>Total</th></tr>
+<tr><td>1</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr><tr><td>2</td><td></td><td><td></td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr><tr><td>3</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr><tr><td>4</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr><tr><td>5</td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+</tbody></table>
+
                                 <br/>
                                 <br/>
                                 <a href="1.Bernoullis_experiment.pdf">Read More</a>
