--- a/src/lab/exp6/Manual.html
+++ b/src/lab/exp6/Manual.html
@@ -42,6 +42,16 @@
     <!--    <link href="../css/style-main.scss" rel="stylesheet"/>
     <script src="tabs.js" type="text/javascript"></script>
 <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-67558473-1', 'auto');ga('send', 'pageview');</script>	-->
+<style>
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+th, td {
+  padding: 5px;
+  text-align: center;
+}
+</style>
 </head>
 
 <body class="index" id="page-top">
@@ -69,22 +79,22 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse menu-div" id="bs-example-navbar-collapse-1" style="border: 0px;">
 
-                        <!-- <ul class="nav navbar-nav navbar-right menu-ul search-ul" style="position: relative; top: -5px;">
+                        <ul class="nav navbar-nav navbar-right menu-ul search-ul" style="position: relative; top: -5px;">
 			                	<li>
 			                		<form method="get" action="../../../search-result.html">
 			                        	<input type="text" class="search-textbox" placeholder="SEARCH FOR A LAB" name="q" id="q"/>
 			                        	<input type="submit" value="" class="search-button" />
 			                        </form>
 			                	</li>
-			                </ul> -->
+			                </ul> 
 
                         <ul class="nav navbar-nav navbar-right menu-ul">
                             <li class="page-scroll menu-li ">
                                 <a class="menu-a" href="http://vlab.co.in/">HOME</a>
                             </li>
-                            <!--  <li class="page-scroll menu-li menu-li-active">
-			                        <a href="http://vlabs.ac.in/labs.html"  class="menu-a menu-a-active" >ALL LABS</a>
-			                    </li> -->
+                              <li class="page-scroll menu-li menu-li-active">
+			                        <a href="http://vlab.co.in" >ALL LABS</a>
+			                    </li> 
                             <li class="page-scroll menu-li ">
                                 <a class="menu-a" href="http://vlab.co.in/participating-institutes">PARTNERS</a>
                             </li>
@@ -140,7 +150,19 @@
                         <!--edit -->
                         <h1 class="text-h1-lightblue">Orifices</h1>
                         <div class="content" id="experiment-article-section-5-content">
-                            <img alt="" height="300" src="Observation_Table.JPG" width="500"/>
+                           <h4>OBSERVATIONS:</h4>
+<h4>CO-FFICIENTOFDISCHARGE</h4>
+<table width=40%>
+<tbody><tr><th>SL.NO></th><th colspan="2">Manometer readings in(cm) H<sub>ug</sub></th><th>Head loss in cm of water h=(H<sub>1</sub>-H<sub>2</sub>)</th><th>Time taken for 10cm rise of water in sec (t)</th><th>Actual discharge(A) in m<sup>3</sup>/sec</th><th>Theoritical dischrage(Q<sub>3</sub> in m<sup>3</sup>/sec</th><th>Coefficient discharge(cod)</th></tr><tr><td></td><th>H1</th><th>H2</th><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><th>1</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><th>2</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><th>3</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><th>4</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><th>5</th><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+
+
+</tbody></table>
+
                             <br/>
                             <p>
                                 <a href="3.Orifices.pdf">Read More</a>
